# tidewarden

./: .dockerignore  .env.template  .gitattributes  .gitmodules  BROWSER-START.md  BUILD.md  Cargo.toml  Dockerfile.acr  README.md  start.sh
.claude/: settings.json
docker/: Dockerfile.debian
infra/: azure-config.sh  azure-deploy.sh  azure-infra.sh  docker-build-push.sh
migrations/mysql/2026-03-02-120000_add_tide_tables/: down.sql  up.sql
migrations/mysql/2026-03-02-130000_add_tide_roles_policies_logs/: down.sql  up.sql
migrations/mysql/2026-03-02-140000_add_tide_user_roles/: down.sql  up.sql
migrations/mysql/2026-03-03-090000_add_sso_tokens_to_sso_users/: down.sql
migrations/mysql/2026-03-03-100000_add_collection_membership_sigs/: down.sql  up.sql
migrations/mysql/2026-03-04-100000_add_signed_policy_data/: down.sql
migrations/postgresql/2026-02-10-120000_add_tide_encrypted_key/: down.sql  up.sql
migrations/postgresql/2026-03-02-120000_add_tide_tables/: up.sql
migrations/postgresql/2026-03-02-130000_add_tide_roles_policies_logs/: up.sql
migrations/postgresql/2026-03-03-090000_add_sso_tokens_to_sso_users/: up.sql
scripts/: init-tidecloak.sh  realm.json  start.sh  tidewarden-start.sh
src/: auth.rs  config.rs  mail.rs  main.rs  sso.rs  sso_client.rs  util.rs
src/api/: identity.rs
src/api/core/: accounts.rs  mod.rs  (+3 more)
src/db/: schema.rs
tidecloak-rs/: Cargo.toml  build.rs  cbindgen.toml
tidecloak-rs/include/: tidecloak.h
tidecloak-rs/src/: admin.rs  auth.rs  config.rs  dpop.rs  error.rs  ffi.rs  jwt.rs  lib.rs  pkce.rs  token.rs  types.rs
(+20 files in other folders)
