[package]
name = "tidecloak-rs"
version = "0.1.0"
edition = "2021"
description = "TideCloak OIDC SDK for native applications"

[lib]
crate-type = ["rlib"]

[features]
default = []
ffi = ["dep:cbindgen"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
url = "2"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
p256 = { version = "0.13", features = ["ecdsa", "jwk"] }
elliptic-curve = { version = "0.13", features = ["jwk"] }
thiserror = "1"

[build-dependencies]
cbindgen = { version = "0.27", optional = true }
